--- a/src/static/popup/popup.css
+++ b/src/static/popup/popup.css
@@ -2,26 +2,26 @@
   font-family: 'Open Sans';
   font-style: normal;
   font-weight: 400;
-  src: url('fonts/open-sans-v15-latin-regular.eot'); 
+  src: url('/fonts/open-sans-v15-latin-regular.eot'); 
   src: local('Open Sans Regular'), local('OpenSans-Regular'),
-       url('fonts/open-sans-v15-latin-regular.eot?#iefix') format('embedded-opentype'), 
-       url('fonts/open-sans-v15-latin-regular.woff2') format('woff2'), 
-       url('fonts/open-sans-v15-latin-regular.woff') format('woff'), 
-       url('fonts/open-sans-v15-latin-regular.ttf') format('truetype'), 
-       url('fonts/open-sans-v15-latin-regular.svg#OpenSans') format('svg'); 
+       url('/fonts/open-sans-v15-latin-regular.eot?#iefix') format('embedded-opentype'), 
+       url('/fonts/open-sans-v15-latin-regular.woff2') format('woff2'), 
+       url('/fonts/open-sans-v15-latin-regular.woff') format('woff'), 
+       url('/fonts/open-sans-v15-latin-regular.ttf') format('truetype'), 
+       url('/fonts/open-sans-v15-latin-regular.svg#OpenSans') format('svg'); 
 }
 
 @font-face {
   font-family: 'Raleway';
   font-style: normal;
   font-weight: 400;
-  src: url('fonts/raleway-v12-latin-regular.eot'); 
+  src: url('/fonts/raleway-v12-latin-regular.eot'); 
   src: local('Raleway'), local('Raleway-Regular'),
-       url('fonts/raleway-v12-latin-regular.eot?#iefix') format('embedded-opentype'), 
-       url('fonts/raleway-v12-latin-regular.woff2') format('woff2'), 
-       url('fonts/raleway-v12-latin-regular.woff') format('woff'), 
-       url('fonts/raleway-v12-latin-regular.ttf') format('truetype'), 
-       url('fonts/raleway-v12-latin-regular.svg#Raleway') format('svg'); 
+       url('/fonts/raleway-v12-latin-regular.eot?#iefix') format('embedded-opentype'), 
+       url('/fonts/raleway-v12-latin-regular.woff2') format('woff2'), 
+       url('/fonts/raleway-v12-latin-regular.woff') format('woff'), 
+       url('/fonts/raleway-v12-latin-regular.ttf') format('truetype'), 
+       url('/fonts/raleway-v12-latin-regular.svg#Raleway') format('svg'); 
 }
 
 * {
@@ -40,7 +40,7 @@ body, html {
   border-bottom: 1px solid #CACACA;
 	width: 100%;
 	height: 60px;
-	padding: 5px;
+	padding: 1rem;
 	margin: 0;
 }
 
@@ -56,8 +56,17 @@ body, html {
 	justify-content: center;
 }
 
+.footer {
+  display: flex;
+	width: 100%;
+  align-content: center;
+	align-items: center;
+	justify-content: flex-end;
+  padding: 1rem;
+}
+
 .main {
-	padding: 12px;
+	padding: 1rem 1rem 0 1rem;
   font-family: 'Open Sans', sans-serif;
   font-size: 16px;
 }
